--- a/app/src/main/res/layout/activity_edit02.xml
+++ b/app/src/main/res/layout/activity_edit02.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500"
+        android:background="@color/brand"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +34,8 @@
             android:fontFamily="@font/cookierunregular"
             android:text="광고 이미지 선택"
             android:layout_gravity="left"
-            android:onClick="clickSelectImage"/>
+            android:onClick="clickSelectImage"
+            android:backgroundTint="@color/brand"/>
         <ImageView
             android:padding="25dp"
             android:id="@+id/p_iv02"
@@ -47,7 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cookierunregular"
-            android:text="게시하기" />
+            android:text="게시하기"
+            android:backgroundTint="@color/brand"/>
 
     </LinearLayout>
 
