--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
         android:background="@color/purple_500"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-
-        >
+        android:backgroundTint="@color/brand">
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
